--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<h1>Hello World!</h1>
-	This is my first htmp page with github!
+	This is my first html page with github!
 </body>
 </html>
